# splEx1.4

./: CMakeLists.txt  Commands.cpp  Commands.h  Environment.cpp  Environment.h  FileSystem.cpp  FileSystem.h  Files.cpp
IO/: exampleOut1.txt
include/: Commands.h  Environment.h  FileSystem.h  Files.h
src/: Commands.cpp  Environment.cpp  FileSystem.cpp  Files.cpp  Test.cpp
